Set version to 0.1.0-SNAPSHOT
Signed-off-by: Miro Spönemann <miro.spoenemann@typefox.io>

--- a/gradle/p2-deployment.gradle
+++ b/gradle/p2-deployment.gradle
@@ -47,3 +47,7 @@ task createLocalP2Repo(type: JavaExec) {
 	]
 	args '-U', 'install'
 }
+
+task clean(type: Delete) {
+	delete 'gradle/maven-tycho-p2-repository/target'
+}
