--- a/gradle/p2-deployment.gradle
+++ b/gradle/p2-deployment.gradle
@@ -38,7 +38,7 @@ task createLocalP2Repo(type: JavaExec) {
 	dependsOn cleanLocalP2Repo,
 		":org.eclipse.lsp4j:createLocalMavenRepo",
 		":org.eclipse.lsp4j.annotations:createLocalMavenRepo",
-		":org.eclipse.lsp4j.services:createLocalMavenRepo"
+		":org.eclipse.lsp4j.jsonrpc:createLocalMavenRepo"
 	classpath configurations.javaMaven
 	workingDir 'gradle/maven-tycho-p2-repository'
 	main = 'org.apache.maven.cli.MavenCli'
