Reimported jsonrpc project

--- a/org.eclipse.lsp4j.jsonrpc/.project
+++ b/org.eclipse.lsp4j.jsonrpc/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>org.eclipse.lsp4j.jsonrpc</name>
-	<comment>Project org.eclipse.lsp4j.services created by Buildship.</comment>
+	<comment>Project org.eclipse.lsp4j.jsonrpc created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
@@ -22,8 +22,8 @@
 		</buildCommand>
 	</buildSpec>
 	<natures>
+		<nature>org.eclipse.buildship.core.gradleprojectnature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.xtext.ui.shared.xtextNature</nature>
-		<nature>org.eclipse.buildship.core.gradleprojectnature</nature>
 	</natures>
 </projectDescription>
