fixed outdated project name references

--- a/gradle/maven-tycho-p2-repository/pom.xml
+++ b/gradle/maven-tycho-p2-repository/pom.xml
@@ -46,12 +46,12 @@
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.lsp4j</groupId>
-			<artifactId>org.eclipse.lsp4j.annotations</artifactId>
+			<artifactId>org.eclipse.lsp4j.generator</artifactId>
 			<version>${lsp4jVersion}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.lsp4j</groupId>
-			<artifactId>org.eclipse.lsp4j.annotations</artifactId>
+			<artifactId>org.eclipse.lsp4j.generator</artifactId>
 			<version>${lsp4jVersion}</version>
 			<classifier>sources</classifier>
 		</dependency>
