--- a/org.eclipse.lsp4j.generator/.project
+++ b/org.eclipse.lsp4j.generator/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>org.eclipse.lsp4j.generator</name>
-	<comment>Project org.eclipse.lsp4j.annotations created by Buildship.</comment>
+	<comment>Project org.eclipse.lsp4j.generator created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
