Fix cbi tests #16
Signed-off-by: Dennis Huebner <dennis.huebner@gmail.com>

--- a/org.eclipse.lsp4j/build.gradle
+++ b/org.eclipse.lsp4j/build.gradle
@@ -27,4 +27,5 @@ jar.manifest {
 	instruction 'Import-Package', "javax.annotation;version=!;resolution:=optional"
 	instruction 'Import-Package', "com.google.common.*;version=\"$versions.guava\""
 	instruction 'Import-Package', '*'
+	instruction 'Bundle-RequiredExecutionEnvironment', 'JavaSE-1.8'
 }
