--- a/org.eclipse.lsp4j.jsonrpc/build.gradle
+++ b/org.eclipse.lsp4j.jsonrpc/build.gradle
@@ -20,4 +20,5 @@ jar.manifest {
 	instruction 'Import-Package', "javax.annotation;version=!;resolution:=optional"
 	instruction 'Import-Package', "com.google.common.*;version=\"$versions.guava\""
 	instruction 'Import-Package', '*'
+    instruction 'Bundle-RequiredExecutionEnvironment', 'JavaSE-1.8'
 }
