Source bundles should not declare the BREE
Signed-off-by: Dennis Huebner <dennis.huebner@gmail.com>

--- a/gradle/manifest-gen.gradle
+++ b/gradle/manifest-gen.gradle
@@ -34,7 +34,7 @@ def limitLineLength = { line, output ->
 		output.add(' ' + line)
 }
 
-def ignoreInstructions = ['Import-Package:', 'Export-Package:', 'Require-Capability:']
+def ignoreInstructions = ['Import-Package:', 'Export-Package:', 'Require-Capability:', 'Bundle-RequiredExecutionEnvironment:']
 
 task sourcesJarManifest(type: Copy) {
 	dependsOn(jar)
