--- a/releng/pom.xml
+++ b/releng/pom.xml
@@ -2,21 +2,20 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<properties>
-		<lsp4jVersion>0.1.0-SNAPSHOT</lsp4jVersion>
-		<mavenVersion>3.2.5</mavenVersion>
-		<tycho-version>0.25.0</tycho-version>
-	</properties>
-
 	<groupId>org.eclipse.lsp4j</groupId>
-	<artifactId>org.eclipse.lsp4j.p2-repository</artifactId>
-	<version>${lsp4jVersion}</version>
-	<packaging>eclipse-repository</packaging>
+	<artifactId>lsp4j.releng</artifactId>
+	<version>0.1.0-SNAPSHOT</version>
+	<packaging>pom</packaging>
+
+	<properties>
+		<tycho-version>0.25.0</tycho-version>
+		<root-dir>${basedir}/..</root-dir>
+	</properties>
 
 	<repositories>
 		<repository>
 			<id>local-gradle-result</id>
-			<url>file:${basedir}/../../build/maven-repository/</url>
+			<url>file:${root-dir}/build/maven-repository</url>
 		</repository>
 		<repository>
 			<snapshots>
@@ -29,44 +28,45 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>18.0</version>
+			<groupId>org.eclipse.lsp4j</groupId>
+			<artifactId>org.eclipse.lsp4j</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.lsp4j</groupId>
 			<artifactId>org.eclipse.lsp4j</artifactId>
-			<version>${lsp4jVersion}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.lsp4j</groupId>
-			<artifactId>org.eclipse.lsp4j</artifactId>
-			<version>${lsp4jVersion}</version>
+			<version>0.1.0-SNAPSHOT</version>
 			<classifier>sources</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.lsp4j</groupId>
 			<artifactId>org.eclipse.lsp4j.generator</artifactId>
-			<version>${lsp4jVersion}</version>
+			<version>0.1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.lsp4j</groupId>
 			<artifactId>org.eclipse.lsp4j.generator</artifactId>
-			<version>${lsp4jVersion}</version>
+			<version>0.1.0-SNAPSHOT</version>
 			<classifier>sources</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.lsp4j</groupId>
 			<artifactId>org.eclipse.lsp4j.jsonrpc</artifactId>
-			<version>${lsp4jVersion}</version>
+			<version>0.1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.lsp4j</groupId>
 			<artifactId>org.eclipse.lsp4j.jsonrpc</artifactId>
-			<version>${lsp4jVersion}</version>
+			<version>0.1.0-SNAPSHOT</version>
 			<classifier>sources</classifier>
 		</dependency>
 	</dependencies>
+
+	<modules>
+		<module>releng-target</module>
+		<module>p2</module>
+		<module>lsp4j-feature</module>
+	</modules>
 
 	<build>
 		<plugins>
@@ -82,6 +82,13 @@
 				<version>${tycho-version}</version>
 				<configuration>
 					<pomDependencies>consider</pomDependencies>
+					<target>
+						<artifact>
+							<groupId>org.eclipse.lsp4j</groupId>
+							<artifactId>lsp4j.target</artifactId>
+							<version>0.1.0-SNAPSHOT</version>
+						</artifact>
+					</target>
 					<environments>
 						<environment>
 							<os>macosx</os>
@@ -100,39 +107,6 @@
 						</environment>
 					</environments>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-p2-repository-plugin</artifactId>
-				<version>${tycho-version}</version>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>assemble-repository</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-antrun-plugin</artifactId>
-				<version>1.1</version>
-				<executions>
-					<execution>
-						<phase>install</phase>
-						<goals>
-							<goal>run</goal>
-						</goals>
-						<configuration>
-							<tasks>
-								<copy todir="${basedir}/../../build/p2-repository/">
-									<fileset dir="${basedir}/target/repository/" />
-								</copy>
-							</tasks>
-						</configuration>
-					</execution>
-				</executions>
 			</plugin>
 		</plugins>
 	</build>
