--- a/gradle/p2-deployment.gradle
+++ b/gradle/p2-deployment.gradle
@@ -6,48 +6,35 @@
  * http://www.eclipse.org/legal/epl-v10.html
  *******************************************************************************/
 
-repositories {
-	mavenCentral()
-}
+apply plugin: 'io.typefox.gradle.p2gen'
 
-configurations {
-	javaMaven
-}
+group = 'org.eclipse.lsp4j'
 
-dependencies {
-	// http://stackoverflow.com/questions/4206679/can-anyone-give-a-good-example-of-using-org-apache-maven-cli-mavencli-programatt
-	javaMaven 'org.slf4j:slf4j-simple:1.7.21'
-	javaMaven 'org.eclipse.aether:aether-connector-basic:1.1.0'
-	javaMaven 'org.eclipse.aether:aether-transport-wagon:1.1.0'
-	javaMaven 'org.apache.maven.wagon:wagon-http:2.10'
-	javaMaven 'org.apache.maven.wagon:wagon-file:2.10'
-	javaMaven 'org.apache.maven.wagon:wagon-http-lightweight:2.10'
-	javaMaven 'org.apache.maven.wagon:wagon-provider-api:2.10'
-	javaMaven 'org.apache.maven:maven-embedder:3.3.9'
-}
-
-task cleanLocalP2Repo(type: Delete) {
-	group = 'Repository'
-	description = 'Delete the local P2 repository'
-	delete 'build/p2-repository'
-}
-
-task createLocalP2Repo(type: JavaExec) {
-	group = 'Repository'
-	description = 'Create a local P2 repository'
-	dependsOn cleanLocalP2Repo,
-		":org.eclipse.lsp4j:createLocalMavenRepo",
-		":org.eclipse.lsp4j.generator:createLocalMavenRepo",
-		":org.eclipse.lsp4j.jsonrpc:createLocalMavenRepo"
-	classpath configurations.javaMaven
-	workingDir 'gradle/maven-tycho-p2-repository'
-	main = 'org.apache.maven.cli.MavenCli'
-	systemProperties = [
-		'maven.multiModuleProjectDirectory': 'gradle/maven-tycho-p2-repository'
-	]
-	args '-U', 'install'
-}
-
-task clean(type: Delete) {
-	delete 'gradle/maven-tycho-p2-repository/target'
+p2gen {
+	feature 'lsp4j-feature'
+	
+	additionalBundle {
+		id 'com.google.gson'
+		version versions.gson_orbit
+	}
+	additionalBundle {
+		id 'com.google.gson.source'
+		version versions.gson_orbit
+	}
+	
+	dependencies {
+		repositoryUrl 'http://download.eclipse.org/releases/luna/201502271000/'
+		bundle 'com.google.guava'
+	}
+	dependencies {
+		repositoryUrl 'http://download.eclipse.org/tools/orbit/S-builds/S20161205183421/repository/'
+		bundle {
+			id 'com.google.gson'
+			version versions.gson_orbit
+		}
+		bundle {
+			id 'com.google.gson.source'
+			version versions.gson_orbit
+		}
+	}
 }
