Added zipped p2 repository

--- a/gradle/p2-deployment.gradle
+++ b/gradle/p2-deployment.gradle
@@ -11,6 +11,7 @@ apply plugin: 'io.typefox.gradle.p2gen'
 group = 'org.eclipse.lsp4j'
 
 p2gen {
+	zipRepository true
 	feature 'lsp4j-feature'
 	
 	additionalBundle {
