--- a/releng/pom.xml
+++ b/releng/pom.xml
@@ -108,6 +108,14 @@
 					</environments>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-packaging-plugin</artifactId>
+				<version>${tycho-version}</version>
+				<configuration>
+					<format>'v'yyyyMMdd-HHmm</format>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
