Fixed #39: added html licenses to SDK feature

--- a/releng/lsp4j-feature/build.properties
+++ b/releng/lsp4j-feature/build.properties
@@ -1,1 +1,4 @@
-bin.includes = feature.xml
+bin.includes = epl-v10.html,\
+               feature.xml,\
+               license.html,\
+               notice.html
