[misc] Wrong license attached to the SDK feature #52
Signed-off-by: Dennis Huebner <dennis.huebner@gmail.com>

--- a/releng/lsp4j-feature/build.properties
+++ b/releng/lsp4j-feature/build.properties
@@ -1,4 +1,5 @@
 bin.includes = epl-v10.html,\
                feature.xml,\
                license.html,\
-               notice.html
+               notice.html,\
+               feature.properties
