Updated version to 0.1.1

--- a/releng/lsp4j-feature/build.properties
+++ b/releng/lsp4j-feature/build.properties
@@ -1,5 +1,5 @@
 bin.includes = epl-v10.html,\
+               feature.properties,\
                feature.xml,\
                license.html,\
-               notice.html,\
-               feature.properties
+               notice.html
