--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -6,7 +6,7 @@
  * http://www.eclipse.org/legal/epl-v10.html
  *******************************************************************************/
 
-version = '0.1.1'
+version = '0.1.2-SNAPSHOT'
 
 ext.versions = [
 	'xtext': '2.10.0',
