Increased version number to 0.1.2

--- a/build.gradle
+++ b/build.gradle
@@ -10,15 +10,10 @@ import java.time.format.DateTimeFormatter
 import java.time.LocalDateTime
 
 buildscript {
-	repositories {
-		jcenter()
-		maven {
-			url 'http://services.typefox.io/open-source/jenkins/job/gradle-plugins/lastStableBuild/artifact/build/maven-repository/'
-		}
-	}
+	repositories.jcenter()
 	dependencies {
 		classpath 'org.xtext:xtext-gradle-plugin:1.0.15'
-		classpath 'io.typefox.gradle:io.typefox.gradle.p2gen:0.1.0'
+		classpath 'io.typefox.gradle:gradle-p2gen:0.1.0'
 	}
 }
 
