--- a/releng/p2/pom.xml
+++ b/releng/p2/pom.xml
@@ -49,7 +49,7 @@
 								</copy>
 								<copy
 									file="${basedir}/target/lsp4j.p2-repository-0.2.0-SNAPSHOT.zip"
-									tofile="${root-dir}/build/p2-repository/../lsp4j.p2-repository-0.2.0-SNAPSHOT.zip">
+									tofile="${root-dir}/build/p2-repository/../lsp4j.p2-repository-0.2.0.zip">
 								</copy>
 							</tasks>
 						</configuration>
