#103: Don't install Xtend as bytecode source

--- a/gradle/xtend-compiler-settings.gradle
+++ b/gradle/xtend-compiler-settings.gradle
@@ -10,7 +10,7 @@ xtext.version = versions.xtext
 
 xtend {
 	debugger {
-		sourceInstaller = 'PRIMARY'
+		sourceInstaller = 'NONE'
 		hideSyntheticVariables = false
 	}
 }
