[build] Test failures make the build 'unstable', not 'failed'; removed obsolete Slack notifications

--- a/gradle/java-compiler-settings.gradle
+++ b/gradle/java-compiler-settings.gradle
@@ -33,3 +33,9 @@ configurations.all {
 		force "com.google.guava:guava:18.0"
 	}
 }
+
+if (findProperty('ignoreTestFailures') == 'true') {
+	tasks.withType(Test) {
+		ignoreFailures = true
+	}
+}
