Removed Buildship preferences from source control (these are generated by Buildship)
NOTE: If you have already imported LSP4J into an Eclipse workspace, you probably need to remove and reimport the projects after this change. Use the "Existing Gradle Project" import wizard for that.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ target/
 build/
 .gradle/
 META-INF/
+org.eclipse.buildship.core.prefs
 org.eclipse.jdt.core.prefs
 org.eclipse.xtext.java.Java.prefs
 org.eclipse.xtend.core.Xtend.prefs
