Upgraded to Gradle 4.5.1, and other minor improvements

--- a/gradle/maven-deployment.gradle
+++ b/gradle/maven-deployment.gradle
@@ -28,6 +28,11 @@ def configurePom = { pom ->
 				organizationUrl 'http://typefox.io'
 			}
 			developer {
+				name 'Jonah Graham'
+				email 'jonah@kichwacoders.com'
+				organizationUrl 'https://kichwacoders.com'
+			}
+			developer {
 				name 'Dennis Hübner'
 				email 'dennis.huebner@typefox.io'
 				organizationUrl 'http://typefox.io'
