--- a/settings.gradle
+++ b/settings.gradle
@@ -12,3 +12,4 @@ include 'org.eclipse.lsp4j.debug'
 include 'org.eclipse.lsp4j.generator'
 include 'org.eclipse.lsp4j.jsonrpc'
 include 'org.eclipse.lsp4j.jsonrpc.debug'
+include 'org.eclipse.lsp4j.websockets'
