--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -13,7 +13,7 @@
 version = '0.7.0-SNAPSHOT'
 
 ext.versions = [
-	'xtext': '[2.11.0,3)',
+	'xtend_lib': '2.16.0',
 	'guava': '[14.0,22)',
 	'gson': '2.7',
 	'gson_orbit': '2.7.0.v20170129-0911',
