--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -17,5 +17,6 @@ ext.versions = [
 	'guava': '[14.0,22)',
 	'gson': '2.8.2',
 	'gson_orbit': '2.8.2.v20180104-1110',
+	'websocket': '1.0',
 	'junit': '4.12'
 ]
