--- a/releng/pom.xml
+++ b/releng/pom.xml
@@ -82,6 +82,17 @@
 			<version>0.8.0-SNAPSHOT</version>
 			<classifier>sources</classifier>
 		</dependency>
+		<dependency>
+			<groupId>org.eclipse.lsp4j</groupId>
+			<artifactId>org.eclipse.lsp4j.websocket</artifactId>
+			<version>0.8.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.lsp4j</groupId>
+			<artifactId>org.eclipse.lsp4j.websocket</artifactId>
+			<version>0.8.0-SNAPSHOT</version>
+			<classifier>sources</classifier>
+		</dependency>
 	</dependencies>
 
 	<modules>
