--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -15,6 +15,7 @@ version = '0.9.0-SNAPSHOT'
 ext.versions = [
 	'xtend_lib': '2.18.0',
 	'guava': '[14.0,28)',
+	'guava_orbit': '27.1.0.v20190517-1946',
 	'gson': '2.8.2',
 	'gson_orbit': '2.8.2.v20180104-1110',
 	'websocket': '1.0',
