Bug #369: Add signing and deploying for lsp4j
Prior to this the git repo that handled signing was outside
of Eclipse.

This change includes changing releng/ from being auto-generated
by ./gradlew generateP2Build to being manually maintained. This
can be reversed in the future by extending
https://github.com/TypeFox/gradle-plugins/blob/9742b36882f062d272917528c5f5ccfec3ee21a5/gradle-p2gen/src/main/java/io/typefox/gradle/p2gen/P2GenPlugin.xtend
to allow signing to be included.

--- a/gradle/java-compiler-settings.gradle
+++ b/gradle/java-compiler-settings.gradle
@@ -35,6 +35,49 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 	from javadoc.destinationDir
 }
 
+ext.signMethod = { jarfile -> 
+	println "Signing $jarfile"
+	def SIGNING_SERVICE = 'http://build.eclipse.org:31338/sign'
+	def STDOUT_FORMAT = '    %{size_upload} bytes uploaded, %{size_download} bytes downloaded (%{time_total} s)\\n'
+
+	ProcessBuilder curl_pb = new ProcessBuilder("curl", 
+		"--fail", "--silent", "--show-error", "--output",
+		"${jarfile}-signed", "--form", "file=@${jarfile}",
+		"--write-out", STDOUT_FORMAT, 
+		SIGNING_SERVICE);
+	println String.join(" ", curl_pb.command());
+	curl_pb.directory(new File("${project.buildDir}"));
+	Process curl_process = curl_pb.start()
+	curl_process.waitFor()
+
+	println curl_process.err.text
+	println curl_process.text
+
+	if (curl_process.exitValue() != 0) {
+		throw new GradleException("Failed to run curl"); 
+	}
+
+	ProcessBuilder mv_pb = new ProcessBuilder("mv", 
+		"${jarfile}-signed", jarfile)
+	println String.join(" ", mv_pb.command());
+	mv_pb.directory(new File("${project.buildDir}"));
+	Process mv_process = mv_pb.start()
+	mv_process.waitFor()
+
+	if (curl_process.exitValue() != 0) {
+		throw new GradleException("Failed to run mv"); 
+	}
+}
+
+task signJar(description: 'Sign JARs with Eclipse Signing Service', group: 'Build'){
+    doLast {
+		signMethod("${project.buildDir}/libs/${project.name}-${project.version}.jar")
+		signMethod("${project.buildDir}/libs/${project.name}-${project.version}-sources.jar")
+		signMethod("${project.buildDir}/libs/${project.name}-${project.version}-javadoc.jar")
+	}
+}
+signJar.dependsOn jar, sourcesJar, javadocJar
+
 artifacts.archives sourcesJar, javadocJar
 
 configurations.all {
