--- a/releng/pom.xml
+++ b/releng/pom.xml
@@ -12,6 +12,12 @@
 		<root-dir>${basedir}/..</root-dir>
 	</properties>
 
+	<pluginRepositories>
+		<pluginRepository>
+			<id>cbi</id>
+			<url>https://repo.eclipse.org/content/repositories/cbi-releases/</url>
+		</pluginRepository>
+	</pluginRepositories>
 	<repositories>
 		<repository>
 			<id>local-gradle-result</id>
@@ -151,4 +157,27 @@
 			</plugin>
 		</plugins>
 	</build>
+    <profiles>
+		<profile>
+			<id>sign</id>
+			<build>
+			<plugins>
+				<plugin>
+					<groupId>org.eclipse.cbi.maven.plugins</groupId>
+					<artifactId>eclipse-jarsigner-plugin</artifactId>
+					<version>1.1.7</version>
+					<executions>
+						<execution>
+						<id>sign</id>
+						<phase>verify</phase>
+							<goals>
+							<goal>sign</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+			</plugins>
+			</build>
+		</profile>
+    </profiles>
 </project>
